cancel to close #6

--- a/public_html/partials/index.html
+++ b/public_html/partials/index.html
@@ -33,7 +33,7 @@
         {{currentPlace.Name}}
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary" ng-click="postSeal()">Mnn.. O-i-C!</button>
       </div>
     </div>
